Fix anime page social links overflow.

--- a/app/assets/stylesheets/anime-show.css.scss
+++ b/app/assets/stylesheets/anime-show.css.scss
@@ -106,6 +106,9 @@
   }
   .social-links {
     margin-top: 10px;
+    .inline-list {
+      overflow: visible;
+    }
   }
 
   // Cast
